refactor: splitting the application users into bunch/follow/users

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,6 +3,14 @@
     justify-content: space-between;
 }
 
+.bell {
+    margin: auto 10px;
+}
+
+.bell i:before {
+    font-size: 22px !important;
+}
+
 header {
     height: 60px;
     --bs-bg-opacity: .7 !important;
