--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -19,6 +19,11 @@
     width: 100%;
 }
 
+.content {
+    min-height: calc(100vh - 140px);
+    margin: 0 auto;
+}
+
 .info_item {
     display: block;
     cursor: pointer;
