--- a/templates/form_base.html
+++ b/templates/form_base.html
@@ -13,6 +13,8 @@
 
   {% block scripts %}{% endblock %}
 
+  {% block header %}{% endblock %}
+
   {% include "includes/favicon.html" %}
   <title>{% block title %}Регистрация{% endblock %}</title>
 </head>
