--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -14,6 +14,10 @@
           <li><a class="nav-link px-2 text-white" href="{% url "user_detail" user.id %}">Профиль</a></li>
           <li><a class="nav-link px-2 text-white" href="#">Сообщения</a></li>
           <li><a class="nav-link px-2 text-white" href="{% url "user_detail_follows" user.id %}">Подписчики</a></li>
+          <li><a class="nav-link px-2 text-white" href="{% url "hometasks" %}">Домашние задания</a></li>
+          {% if user.role == "Teacher" %}
+          <li><a class="nav-link px-2 text-white" href="{% url "hometask_create" %}">Создать</a></li>
+          {% endif %}
         {% endif %}
 
         {% if request.user.is_superuser %}
@@ -25,6 +29,7 @@
         <input type="search" class="form-control form-control-dark" placeholder="Введите текст..."
                aria-label="Введите текст">
       </form>
+      
 
       <div class="text-end">
         {% if user.is_authenticated %}
