--- a/templates/hometasks/hometask_student_detail.html
+++ b/templates/hometasks/hometask_student_detail.html
@@ -3,22 +3,29 @@
 {% block title %}Домашнее задание{% endblock %}
 
 {% block styles %}
-<link rel="stylesheet" type="text/css" href={% static "css/profile.css" %}>{% endblock %}
+  <link rel="stylesheet" type="text/css" href={% static "css/profile.css" %}>
+  <link rel="stylesheet" type="text/css" href={% static "css/hometask.css" %}>{% endblock %}
 {% block content %}
 
-<div class="widget-row d-flex">
-  <div class="widget">
-    <h2>Название: {{ hometask.title }}</h2>
-    <h3>Учитель: {{ hometask.teacher }}</h3>
-    <h3>Описание: {{ hometask.description }}</h3>
-    <span>Файл: <a href="{% url 'hometask_download' hometask.get_file_name %}">{{ hometask.get_file_name }}</a></span>
-  </div>
-</div>
+  <div class="widget hometask">
+    <h1 class="hometask-title">{{ hometask.title }} <span class="teacher"><a
+            href="{% url "user_detail" hometask.teacher.id %}">({{ hometask.teacher }})</a></span></h1>
+    <div class="hometask-content">
+      <p class="hometask-description">{{ hometask.description }}</p>
+      <span>Прекрипленный файл: <a
+              href="{% url 'hometask_download' hometask.get_file_name %}">{{ hometask.get_file_name }}</a></span>
+    </div>
 
-<form method="post">
-  {% csrf_token %}
-  <button class="edit" type="submit">
-    Отметить
-  </button>
-</form>
+    <form method="post">
+      {% csrf_token %}
+      <div class="button-wrapper">
+        <button class="edit" type="submit">
+          Отметить
+        </button>
+      </div>
+    </form>
+
+  </div>
+
+
 {% endblock %}
