add bio field to User model

--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -37,8 +37,12 @@
           {{ form.last_name }}
         </div>
         <div class="form-floating">
+          {{ form.bio }}
+        </div>
+        <div class="form-floating">
           {{ form.role }}
         </div>
+
         <div class="form-floating">
           {{ form.photo }}
         </div>
