--- a/templates/users/user_detail.html
+++ b/templates/users/user_detail.html
@@ -91,6 +91,7 @@
         <div class="name">{{ user_detail.first_name }} {{ user_detail.last_name }}</div>
         <div class="status">{{ user_detail.email }}</div>
         <div class="status">{{ user_detail.role }}</div>
+        <div class="status">{{ user_detail.bio }}</div>
       </div>
     </div>
     {% if user_detail.timeline %}
