--- a/templates/users/edit_profile.html
+++ b/templates/users/edit_profile.html
@@ -29,9 +29,9 @@
         {{ form.photo }}
       </div>
 
-      {#      <div class="form-floating ">#}
-      {#        {{ form.role }}#}
-      {#      </div>#}
+      <div class="form-floating ">
+        {{ form.bio }}
+      </div>
 
       <button class="w-100 btn btn-lg btn-primary margin-top" type="submit">
         Обновить
