--- a/templates/includes/user_card.html
+++ b/templates/includes/user_card.html
@@ -24,6 +24,10 @@
           {% if user.role %}{{ user.role }}{% else %}Отсутствует{% endif %}
           <br>
 
+          О пользователе:
+          {% if user.bio %}{{ user.bio }}{% else %}Отсутствует{% endif %}
+          <br>
+
         </p>
 
       </div>
