--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -37,9 +37,9 @@
         </a>
       {% endif %}
 
-      <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
-        <input type="search" class="form-control form-control-dark" placeholder="Введите текст..."
-               aria-label="Введите текст">
+      <form method="post" action="{% url 'homepage' %}" class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
+        {% csrf_token %}
+        {{ search_form.value }}
       </form>
       
 
