fix: set correct url for redirect

--- a/templates/users/password_reset_complete.html
+++ b/templates/users/password_reset_complete.html
@@ -4,6 +4,6 @@
 {% block title %}Успешно{% endblock %}
 {% block content %}
   <p>{% translate "Your password was changed." %}</p>
-  <a href="{% url "profile" %}"
-     class="btn btn-outline-light me-2">Me</a>
+  <a href="{{ login_url }}"
+     class="btn btn-outline-light me-2">Войти</a>
 {% endblock %}
