feat: add edit timeline button

--- a/templates/users/edit_profile.html
+++ b/templates/users/edit_profile.html
@@ -33,6 +33,8 @@
         {{ form.bio }}
       </div>
 
+      <div class="container-fluid text-center"><a href="{% url 'edit-timeline-profile' %}" class="btn btn-light">Изменить раписание</a></div>
+
       <button class="w-100 btn btn-lg btn-primary margin-top" type="submit">
         Обновить
       </button>
