--- a/static/css/base.css
+++ b/static/css/base.css
@@ -99,6 +99,10 @@ a {
     filter: drop-shadow(0 0 5px #ffffff);
 }
 
+.avatar {
+    object-fit: contain;
+}
+
 .img-wrapper img {
     object-fit: contain;
     display: block;
