fix: edit bug with bunch.time.choices

--- a/templates/users/add_bunch.html
+++ b/templates/users/add_bunch.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
-{% block title %}Мой профиль{% endblock %}
+{% block title %}Записаться{% endblock %}
 
 {% block styles %}
   <link rel="stylesheet" type="text/css" href={% static "css/base_form.css" %}>
