--- a/static/css/base.css
+++ b/static/css/base.css
@@ -88,7 +88,7 @@ a {
     border-radius: 10px;
 
     max-height: 400px;
-    overflow: auto;
+
 }
 
 .card-body {
@@ -111,6 +111,8 @@ a {
 
 .card-text {
     border-top: 1px solid #CCC; padding-top: 5px; margin-top: 10px;
+    overflow: auto;
+    max-height: 150px;
 }
 
 /* Header */
