--- a/templates/users/edit_profile.html
+++ b/templates/users/edit_profile.html
@@ -33,7 +33,11 @@
         {{ form.bio }}
       </div>
 
-      <div class="container-fluid text-center"><a href="{% url 'edit-timeline-profile' %}" class="btn btn-light">Изменить раписание</a></div>
+      {% if is_teacher %}
+
+        <div class="container-fluid text-center"><a href="{% url 'edit-timeline-profile' %}" class="btn btn-light">Изменить раписание</a></div>
+
+      {% endif %}
 
       <button class="w-100 btn btn-lg btn-primary margin-top" type="submit">
         Обновить
