fix: edit chat template

--- a/templates/chats/chats.html
+++ b/templates/chats/chats.html
@@ -18,7 +18,7 @@
         </div>
         <div class="interlocutor">
           <span class="header-name">{{ interlocutor.first_name }} {{ interlocutor.last_name }}</span><br>
-          <span class="message-time">Был в сети вчера</span>
+          <span class="message-time">Был в сети недавно</span>
         </div>
 
         <div class="user">
